--- a/arch/arm/configs/cyanogenmod_galaxysmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_galaxysmtd_defconfig
@@ -214,9 +214,7 @@ CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
 CONFIG_IFB=y
 CONFIG_TUN=m
-CONFIG_BCMDHD=m
-CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/vendor/firmware/nvram_net.txt"
+CONFIG_BCM4329=m
 CONFIG_PPP=y
 CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_BSDCOMP=y
